# colony-manager

./: .gitignore  Dockerfile  alembic.ini  app.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  forms.py  models.py
app/routes/: animals.py  auth.py  breeding.py  cages.py  histology.py  main.py  studies.py
app/templates/: animals.html  base.html  breeding.html  cages.html  histology.html  list_users.html  login.html  login.py  macros.html  settings.html  view_animal.html  view_breeding_pair.html  view_cage.html  view_dashboard.html  view_ear.html  view_settings.html
migrations/: env.py
migrations/versions/: 0066e358dbb1_initial.py  0c80048cf9fb_add_baseline_weight.py  1e39d2125c99_add_user_role_and_transaction_tracking.py  2a5b1dffef02_add_default_procedure_target_for_.py  3ccd8ae64ede_make_password_crypt_field_longer.py  3d7425aced13_optional_weight.py  3e1a2b3c4d5e_datatype_multi_callbacks.py  4b07fb56d483_make_tags_nested.py  4eb4810800df_add_feed_and_weight_log.py  6932f1d694cc_add_data_schema.py  6a0cca06bd80_add_tags_to_animal_and_animalevent.py  6c14f2715e47_confocal_image_frequency_should_be_float.py  799ccd2c81b3_add_nested_procedures.py  d1f4dc630e3d_add_user_model.py  (+13 more)
scripts/: load_original_weight_log.py  sync_data.py
templates/: animal_detail.html  animals.html  base.html  breeding.html  breeding_pair_detail.html  cage_add.html  cage_detail.html  cages.html  calendar.html  ear_detail.html  event_popover.html  histology.html  index.html  macros.html  settings.html  studies.html  study_detail.html  study_edit.html  wean_litter.html
(+72 files in other folders)
